--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,17 @@
-name: metadata_fetch
+name: metadata_fetch_plus
 description: A dart library for extracting metadata on web pages such as OpenGraph, Meta, Twitter Cards, and Structured Data (Json-LD)
-version: 0.4.1
-homepage: https://github.com/jg-l/metadata_fetch
+version: 1.0.0
+homepage: https://github.com/nghiashiyi/metadata_fetch
+publish_to: https://pub.dev/
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
-  http: ^0.13.3
-  string_validator: ^0.3.0
-  html: ^0.15.0
+  http: ^1.1.0
+  string_validator: ^1.0.0
+  html: ^0.15.4
 
 dev_dependencies:
-  pedantic: ^1.11.0
-  test: ^1.17.5
+  pedantic: ^1.11.1
+  test: ^1.24.6
